Fixed font display issue
Some characters would not display correctly, this version attempts to fix that

--- a/index_template.html
+++ b/index_template.html
@@ -3,7 +3,7 @@
 <head>
   <title>🎮🕹️👾</title>
   <link rel="icon" href="https://cdn.hinative.com/attached_images/74450/2d5363203b2fbc7afecf21e005ce3881ced63c1e/large.png?1488529873">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-metro.css">
 </head>
