--- a/index_template.html
+++ b/index_template.html
@@ -17,25 +17,25 @@
   <div class="w3-padding-32"></div>
   <div class="w3-padding-16"></div>
 
-  <footer class="w3-bar w3-bottom w3-light-gray w3-left">
-      <p class="w3-bar-item w3-button">Desenvolvimento de Aplicações Web</p>
-      <p class="w3-bar-item w3-button w3-right">Designed by Guilherme Reis</p>
+  <footer class="w3-bar w3-bottom w3-light-gray">
+      <p class="w3-bar-item w3-button w3-tiny">© 2019 Desenvolvimento de Aplicações Web</p>
+      <p class="w3-bar-item w3-button w3-right w3-tiny">Designed by Guilherme Reis</p>
   </footer>
   <div class="w3-padding-32 w3-bottom"></div>
 
   <div class="w3-padding-8 w3-margin-top w3-margin-right w3-margin-left">
     <article class="w3-card-4 w3-metro-darken w3-border w3-border-white w3-round-xlarge">
-      <h6 class="w3-margin-left">~USER-NAME~ posted:</h6>
-      <h5 class="w3-margin w3-center">Message will be displayed here!</h5>
-      <h6 class="w3-margin-left">2019-09-21, 23:15</h6>
+      <p class="w3-margin-left w3-medium">~USER-NAME~ posted:</p>
+      <p class="w3-margin w3-center w3-large">Message will be displayed here!</p>
+      <p class="w3-margin-left w3-small">posted 2019-09-21 23:15 | updated 2019-09-21 23:15</p>
     </article>
   </div>
 
   <div class="w3-padding-8 w3-margin-top w3-margin-right w3-margin-left">
     <article class="w3-card-4 w3-metro-darken w3-border w3-border-white w3-round-xlarge">
-      <h6 class="w3-margin-left">Guilherme posted:</h6>
-      <h5 class="w3-margin w3-center">First message on this forum!</h5>
-      <h6 class="w3-margin-left">2019-09-21, 23:14</h6>
+      <p class="w3-margin-left w3-medium">Guilherme posted:</p>
+      <p class="w3-margin w3-center w3-large">First message on this forum!</p>
+      <p class="w3-margin-left w3-small">posted 2019-09-21 23:14 | updated 2019-09-21 23:14</p>
     </article>
   </div>
 
