--- a/index_template.html
+++ b/index_template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>🎮🕹️👾</title>
+  <title>🎮Homepage🕹️👾</title>
   <link rel="icon" href="https://cdn.hinative.com/attached_images/74450/2d5363203b2fbc7afecf21e005ce3881ced63c1e/large.png?1488529873">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -11,8 +11,8 @@
 
   <header class="w3-bar w3-top w3-light-grey">
       <a href="index_template.html"><img src="logo.png" alt="logo" class="w3-bar-item"></a>
-      <a href="#" class="w3-bar-item w3-right w3-button w3-padding-32">Register</a>
-      <a href="#" class="w3-bar-item w3-right w3-button w3-padding-32">Login</a>
+      <a href="register_template.html" class="w3-bar-item w3-right w3-button w3-padding-32">Register</a>
+      <a href="login_template.html" class="w3-bar-item w3-right w3-button w3-padding-32">Login</a>
   </header>
   <div class="w3-padding-32"></div>
   <div class="w3-padding-16"></div>
