--- a/register_template.html
+++ b/register_template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>🎮Login🕹️👾</title>
+  <title>🎮Register🕹️👾</title>
   <link rel="icon" href="https://cdn.hinative.com/attached_images/74450/2d5363203b2fbc7afecf21e005ce3881ced63c1e/large.png?1488529873">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
